<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView_male"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_3sdp"
            android:elevation="@dimen/_3sdp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toTopOf="@+id/cardView5"
            app:layout_constraintEnd_toStartOf="@+id/cardView_female"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/maleTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:drawablePadding="@dimen/_7sdp"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/male"
                android:textAlignment="center"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/ic_male" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView_female"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:elevation="@dimen/_3sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView_male"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/cardView_male"
            app:layout_constraintTop_toTopOf="@+id/cardView_male">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/femaleTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:padding="20dp"
                android:text="@string/female"
                android:textAlignment="center"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/ic_female" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginVertical="@dimen/_25sdp"
            app:layout_constraintBottom_toTopOf="@+id/cardView3"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@id/cardView_male"
            app:layout_constraintEnd_toEndOf="@id/cardView_female"
            app:layout_constraintTop_toBottomOf="@+id/cardView_male">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/height_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0cm"
                    android:textSize="@dimen/_30sdp"
                    android:textStyle="bold" />

                <SeekBar
                    android:id="@+id/Seekbar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:max="200"

                    android:progress="50"
                    android:progressBackgroundTint="@color/md_theme_dark_inversePrimary"
                    android:progressTint="@color/md_theme_dark_surfaceVariant"
                    android:thumbTint="@color/md_theme_dark_onSecondary" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toTopOf="@+id/calculate"
            app:layout_constraintEnd_toStartOf="@+id/cardView4"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="15dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:baselineAligned="false"
                    android:gravity="center_horizontal"
                    android:weightSum="2">

                    <RelativeLayout
                        android:id="@+id/weight_minus"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/stepper_background">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_centerInParent="true"
                            android:background="?selectableItemBackgroundBorderless"
                            android:contentDescription="@string/minus"
                            android:padding="@dimen/_8sdp"
                            app:srcCompat="@drawable/subtract" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/weight_txt"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:maxLength="3"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:text="@string/_50"
                        android:textSize="@dimen/_20sdp"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:id="@+id/weight_plus"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/stepper_background">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_centerInParent="true"
                            android:background="?selectableItemBackgroundBorderless"
                            android:contentDescription="@string/plus"
                            android:padding="3dp"
                            app:srcCompat="@drawable/ic_add" />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/cardView3"
            app:layout_constraintTop_toTopOf="@+id/cardView3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="15dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/age"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:baselineAligned="false"
                    android:gravity="center_horizontal"
                    android:weightSum="2">

                    <RelativeLayout
                        android:id="@+id/age_minus"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/stepper_background">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_centerInParent="true"
                            android:background="?selectableItemBackgroundBorderless"
                            android:contentDescription="@string/minus"
                            android:padding="@dimen/_8sdp"
                            app:srcCompat="@drawable/subtract" />

                    </RelativeLayout>
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/age"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/_19"
                        android:gravity="center"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:maxLength="3"
                        android:textSize="@dimen/_20sdp"
                        android:textStyle="bold" />


                    <RelativeLayout
                        android:id="@+id/age_plus"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/stepper_background">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_centerInParent="true"
                            android:background="?selectableItemBackgroundBorderless"
                            android:contentDescription="@string/plus"
                            android:padding="3dp"
                            app:srcCompat="@drawable/ic_add" />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calculate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginVertical="@dimen/_25sdp"
            android:backgroundTint="@color/md_theme_dark_onSecondary"
            android:elevation="@dimen/_5sdp"
            android:gravity="center|center_vertical"
            android:text="@string/calculate"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>